test/src/e2e_vm_tests/test_programs/should_fail/multiple_enums_with_the_same_name/src/main.sw
script;

mod module0;
mod module1;

fn main() {
    let mut x = module0::MyEnum::A;
    let y = module1::MyEnum::A;
    x = y;
}
